kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: sre-demo

spec:
  type: LoadBalancer

  selector:
    app: demo

  ports:
  - port: 80
    targetPort: 80
